--- a/index.html
+++ b/index.html
@@ -2,7 +2,25 @@
 <html>
 
 <head>
-<title>Yufeng (Eric) Wu</title>
+  <title>Yufeng (Eric) Wu</title>
+  <meta charset="utf-8">
 </head>
+    
+<body>
+  <div>
+    <h1>Welcome to my portfolio!</h1>
+    <hr/>
+  </div>
+  
+  <div>
+    <h2>Name: Yufeng (Eric) Wu</h2>
+  </div>
+  
+  <div>
+    <a href="EricYufengWu.github.io/README.md">link</a>
+  </div>
+  
+  
+</body>
     
 </html>
