--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   </div>
   
   <div>
-    <a href="resume.html">link to my resume</a>
+    <a href="resume.html" target="_blank">link to my resume</a>
+    <a href="bio.html">link to my bio</a>
   </div>
   
   
