--- a/index.html
+++ b/index.html
@@ -4,22 +4,26 @@
 <head>
   <title>Yufeng (Eric) Wu</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="default_style.css">
+  <link rel="stylesheet" type="text/css" href="main_page.css">
 </head>
     
 <body>
   <div>
     <h1>Welcome to my portfolio!</h1>
-    <hr/>
   </div>
   
   <div>
-    <h2>Name: Yufeng (Eric) Wu</h2>
+    <h2>Yufeng (Eric) Wu</h2>
   </div>
   
   <div>
-    <a href="resume.html" target="_blank">link to my resume</a>
-    <br/>
-    <a href="bio.html">link to my bio</a>
+    <p class="center"><img src="photo.jpg" width="440" height="340" alt="Photo of Myself"/></p>
+  </div>
+  
+  <div>
+    <p class="center"><a href="resume.html" target="_blank">link to my resume</a></p>
+    <p class="center"><a href="bio.html">link to my bio</a><p/>
   </div>
   
   
