--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
 <head>
   <title>Yufeng (Eric) Wu Resume</title>
   <meta charset="utf-8"/>
+  <link rel="stylesheet" type="text/css" href="default_style.css">
 </head>
   
 <body>
