--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
   </div>
   
   <div>
-    <h2>Education</h2>
+    <h2 class="dotline">Education</h2>
       <h3>Tufts University - Medford, MA</h3>
       <p>Bachelor of Science, Mechanical Engineering &nbsp;&nbsp;&nbsp;&nbsp; Minor: Studio Art &nbsp;&nbsp;&nbsp;&nbsp; Anticipated in May 2021</p>
       <p>Relevant Coursework: Intro to Computer Science, Intro to Electric Systems, Intro to Mechanics and Fabrication, Thermodynamics, Intro to robotics.</p>
@@ -21,7 +21,7 @@
   </div>
   
   <div>
-    <h2>Skills</h2>
+    <h2 class="dotline">Skills</h2>
       <p>Programming: C++, Python, Labview</p>
       <p>CAD Software: Solidworks, Rhino, Blender</p>
       <p>Adobe Suite: Premiere Pro CC, Indesign , Illustrator CC, Acrobat DC, Photoshop CC.</p>
@@ -29,7 +29,7 @@
   </div>
   
   <div>
-    <h2>Experience</h2> 
+    <h2 class="dotline">Experience</h2> 
       <h3>Tufts University Center for Engineering Education and Outreach (CEEO)</h3>
         <h4>LEGO Consultant &nbsp;&nbsp;&nbsp;&nbsp; (Nov. 2017 - present)</h4>
           <p>Design and prototype 3rd-party adapter that combines LEGO and other technologies.</p>
@@ -49,7 +49,7 @@
   </div>
     
   <div>
-    <h2>Honors and Awards</h2>
+    <h2 class="dotline">Honors and Awards</h2>
       <p>Silver Award, 2015 Asian-Pacific Robotics Competition (VEX).</p>
   </div>
   
