--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
   <div>
     <p class="center"><a href="resume.html" target="_blank">link to my resume</a></p>
-    <p class="center"><a href="bio.html">link to my bio</a><p/>
+    <p class="center"><a href="bio.html">link to my bio</a></p>
   </div>
   
   
