--- a/index.html
+++ b/index.html
@@ -150,7 +150,9 @@
   </section>
   
   <footer>
-    <p class = contact>Contact Me:<br> yufeng.wu@tufts.edu</p>
+    <div class="container">
+      <p class = contact>Contact Me:<br> yufeng.wu@tufts.edu</p>
+    </div>
   </footer>
   
   <script type="text/javascript" src="./javascript/about.js"></script>
