--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="./css/about/showcase.css">
   <link rel="stylesheet" type="text/css" href="./css/about/box.css">
 </head>
-    
+
 <body>
   
   <header>
@@ -31,6 +31,16 @@
     </div>
   </header>
   
+  
+  <!-- Intro -->
+  <section id="introduction">
+    <div class="container">
+      <p id="intro"><img id="profilepic" src="./documents/about/profilepic.jpg" alt="what I look like">Hi! My name is Yufeng (Eric) Wu, and I am currently a Junior at Tufts University at Medford, MA. I am studying in mechanical engineering with a minor in studio art. <br>
+      This website contains several sections that collectively define who I am. It is still under construction, as I am still refining some documentations of my previous and current projects. If you have any further questions, please feel free to contact me at: <br>yufeng.wu@tufts.edu or 857-869-3542.</p>
+
+    </div>
+  </section>
+  
   <!-- Image Gallery -->
   <section id="showcase">
     <div class="container">
@@ -38,55 +48,55 @@
       <!-- Full-width images with number text -->
       <div class="mySlides">
         <div class="numbertext">1 / 6</div>
-        <img src="./documents/about/Featuring_1.JPEG" style="width:100%">
+        <a href="https://yufengericwu.myportfolio.com/" target="_blank"><img src="./documents/about/Featuring_1.JPEG" style="width:100%"></a>
         <div class="imgcontent">
-          <h1>Heading</h1>
-          <p>Lorem ipsum..</p>
+          <h1>Hexapods</h1>
+          <p class="showcasetext">Starting in my Sophomore Spring, I am building a series of hexapods from scratch. Right now I have built and tested 4 of them, and the number will continue to grow as I keep making improvements on all aspects.&nbsp<a class="showcaselink" href="https://yufengericwu.myportfolio.com/" target="_blank">Learn more</a></p>
         </div>
       </div> 
 
       <div class="mySlides">
         <div class="numbertext">2 / 6</div>
-        <img src="./documents/about/Featuring_2.JPG" style="width:100%">
+        <a href="https://yufengericwu.myportfolio.com/" target="_blank"><img src="./documents/about/Featuring_2.JPG" style="width:100%"></a>
         <div class="imgcontent">
-          <h1>Heading</h1>
-          <p>Lorem ipsum..</p>
+          <h1>LEGO Spike Prime Backpack</h1>
+          <p class="showcasetext">As an intern in Tufts Center for Engineering Education and Outreach (CEEO), I designed PCBs and 3D-printed housings that combine 3rd-party devices with the new LEGO robotics education kit.&nbsp<a class="showcaselink" href="https://yufengericwu.myportfolio.com/" target="_blank">Learn more</a></p>
         </div>
       </div> 
 
       <div class="mySlides">
         <div class="numbertext">3 / 6</div>
-        <img src="./documents/about/Featuring_3.JPG" style="width:100%">
+        <a href="https://yufengericwu.myportfolio.com/" target="_blank"><img src="./documents/about/Featuring_3.JPG" style="width:100%"></a>
         <div class="imgcontent">
-          <h1>Heading</h1>
-          <p>Lorem ipsum..</p>
+          <h1>Delta Ceramics 3D-Printer</h1>
+          <p class="showcasetext">With a professor in Tufts Sculpture department, I built a delta-style 3D-printer dedicated for ceramics (clay) printing. We adopted a design online and built our own version with improvements.&nbsp<a class="showcaselink" href="https://yufengericwu.myportfolio.com/" target="_blank">Learn more</a></p>
         </div>
       </div> 
 
       <div class="mySlides">
         <div class="numbertext">4 / 6</div>
-        <img src="./documents/about/Featuring_4.jpg" style="width:100%">
+        <a href="https://yufengericwu.myportfolio.com/" target="_blank"><img src="./documents/about/Featuring_4.jpg" style="width:100%"></a>
         <div class="imgcontent">
-          <h1>Heading</h1>
-          <p>Lorem ipsum..</p>
+          <h1>Fluidic Control Board for Soft Robotics</h1>
+          <p class="showcasetext">I built a control board with a solenoid valve manifold and power MOSFETS. The board is used in my lab to study and test out inflatable soft robotics actuators.&nbsp<a class="showcaselink" href="https://yufengericwu.myportfolio.com/" target="_blank">Learn more</a></p>
         </div>
       </div> 
 
       <div class="mySlides">
         <div class="numbertext">5 / 6</div>
-        <img src="./documents/about/Featuring_5.jpg" style="width:100%">
+        <a href="https://yufengericwu.myportfolio.com/" target="_blank"><img src="./documents/about/Featuring_5.JPEG" style="width:100%"></a>
         <div class="imgcontent">
-          <h1>Heading</h1>
-          <p>Lorem ipsum..</p>
+          <h1>The Mighty Board</h1>
+          <p class="showcasetext">I designed a "microcontrollers board" for a professor at Tufts University: A board that hosts several development boards and makes testing and learning embedded system programming easier than ever.&nbsp<a class="showcaselink" href="https://yufengericwu.myportfolio.com/" target="_blank">Learn more</a></p>
         </div>
       </div> 
 
       <div class="mySlides">
         <div class="numbertext">6 / 6</div>
-        <img src="./documents/about/Featuring_6.jpg" style="width:100%">
+        <a href="https://yufengericwu.myportfolio.com/" target="_blank"><img src="./documents/about/Featuring_6.jpg" style="width:100%"></a>
         <div class="imgcontent">
-          <h1>Heading</h1>
-          <p>Lorem ipsum..</p>
+          <h1>MiniJumbo</h1>
+          <p class="showcasetext">The final project of my Sophomore spring robotics class, this cute puppet has 6 degrees of freedom and can interact with his surroundings through image processing.&nbsp<a class="showcaselink" href="https://yufengericwu.myportfolio.com/" target="_blank">Learn more</a></p>
         </div>
       </div> 
       
@@ -109,7 +119,7 @@
           <img class="demo cursor" src="./documents/about/Featuring_4.jpg" style="width:100%" onclick="currentSlide(4)" alt="Featuring_4">
         </div>
         <div class="column">
-          <img class="demo cursor" src="./documents/about/Featuring_5.jpg" style="width:100%" onclick="currentSlide(5)" alt="Featuring_5">
+          <img class="demo cursor" src="./documents/about/Featuring_5.JPEG" style="width:100%" onclick="currentSlide(5)" alt="Featuring_5">
         </div>
         <div class="column">
           <img class="demo cursor" src="./documents/about/Featuring_6.jpg" style="width:100%" onclick="currentSlide(6)" alt="Featuring_6">
@@ -120,29 +130,21 @@
   </section>
   
   
-  <!-- Intro -->
-  <section id="introduction">
-    <div class="container">
-      <p>Hi! My name is Yufeng (Eric) Wu, and I am currently a Sophomore at Tufts University at Medford, MA. I am studying in mechanical engineering with a minor in studio art. <br>
-      This website contains several sections that collectively define who I am. It is still under construction, as I am still refining some documentations of my previous and current projects. If you have any further questions, please feel free to contact me at yufeng.wu@tufts.edu or 857-869-3542.</p>
-    </div>
-  </section>
-  
   <!-- My Skills -->
   <section id="boxes">
     <div class="container">
       <div class="box">
-        <img src="./documents/about/engineering_design.jpg" alt="Engineering Design">
+        <img src="./documents/about/engineering_design.png" alt="Engineering Design">
         <h3>Engineering Design</h3>
         <p>Brainstorming, sketching, CADing, and rapid prototyping. </p>
       </div>
       <div class="box">
-        <img src="./documents/about/robotics.jpg" alt="Robotics">
+        <img src="./documents/about/robotics.png" alt="Robotics">
         <h3>Robotics</h3>
         <p>As a project leader and a core member at Tufts Robotics Club, I am familiar with the hardware aspects of robotics such ad actuators, sensors, PCB designing, front-end programming, etc.</p>
       </div>
       <div class="box">
-        <img src="./documents/about/digital_fabrication.jpg" alt="Digital Fabrication">
+        <img src="./documents/about/digital_fabrication.png" alt="Digital Fabrication">
         <h3>Digital Fabrication</h3>
         <p>As a fabrication specialist in Tufts Nolop Makerspace, I am experienced with operating different fabrication tools and using CAD softwares such as Solidworks, Illustrator, and Rhino.</p>
       </div>
