--- a/research.html
+++ b/research.html
@@ -9,6 +9,7 @@
   <meta name="descripton" content="Yufeng (Eric) Wu's personal website">
   <meta name="keywords" content="portfolio, mechanical engineering">
   <link rel="stylesheet" type="text/css" href="./css/default_style.css">
+  <link rel="stylesheet" type="text/css" href="./css/about/box.css">
 </head>
     
 <body>
@@ -31,7 +32,9 @@
   
   
   <footer>
-    <p>Contact Me:<br> yufeng.wu@tufts.edu</p>
+    <div class="container">
+      <p class = contact>Contact Me:<br> yufeng.wu@tufts.edu</p>
+    </div>
   </footer>
   
 </body>
