--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
   <meta name="descripton" content="Yufeng (Eric) Wu's personal website">
   <meta name="keywords" content="portfolio, mechanical engineering">
   <link rel="stylesheet" type="text/css" href="./css/default_style.css">
-  <link rel="stylesheet" type="text/css" href="./css/about/box.css">
+  <link rel="stylesheet" type="text/css" href="./css/projects/projectprofile.css">
 </head>
     
 <body>
@@ -28,6 +28,61 @@
       </nav>
     </div>
   </header>
+  
+  
+  <!-- project profiles -->
+  <section id="items">
+    <div class="container">
+      <div class="itembox">
+        <div class="itemprofile">
+          <img src="./documents/about/Featuring_1.JPEG" alt="Engineering Design" class="thumbnail">
+          <div class="title">
+            <p>Hello World</p>
+          </div>
+        </div> 
+      </div>
+      <div class="itembox">
+        <div class="itemprofile">
+          <img src="./documents/about/Featuring_1.JPEG" alt="Engineering Design" class="thumbnail">
+          <div class="title">
+            <p>Hello World</p>
+          </div>
+        </div> 
+      </div>
+      <div class="itembox">
+        <div class="itemprofile">
+          <img src="./documents/about/Featuring_1.JPEG" alt="Engineering Design" class="thumbnail">
+          <div class="title">
+            <p>Hello World</p>
+          </div>
+        </div> 
+      </div>
+      <div class="itembox">
+        <div class="itemprofile">
+          <img src="./documents/about/Featuring_1.JPEG" alt="Engineering Design" class="thumbnail">
+          <div class="title">
+            <p>Hello World</p>
+          </div>
+        </div> 
+      </div>
+      <div class="itembox">
+        <div class="itemprofile">
+          <img src="./documents/about/Featuring_1.JPEG" alt="Engineering Design" class="thumbnail">
+          <div class="title">
+            <p>Hello World</p>
+          </div>
+        </div> 
+      </div>
+      <div class="itembox">
+        <div class="itemprofile">
+          <img src="./documents/about/Featuring_1.JPEG" alt="Engineering Design" class="thumbnail">
+          <div class="title">
+            <p>Hello World</p>
+          </div>
+        </div> 
+      </div>
+    </div>
+  </section>
   
   
   
