--- a/cardistry.html
+++ b/cardistry.html
@@ -9,7 +9,7 @@
   <meta name="descripton" content="Yufeng (Eric) Wu's personal website">
   <meta name="keywords" content="portfolio, mechanical engineering">
   <link rel="stylesheet" type="text/css" href="./css/default_style.css">
-
+  <link rel="stylesheet" type="text/css" href="./css/about/box.css">
 </head>
     
 <body>
@@ -23,9 +23,9 @@
           <li><a href="index.html">About</a></li>
           <li><a href="https://drive.google.com/file/d/1--5kR4o6tvyb9kgonyveolyrORQ6wEy0/view?usp=sharing" target="blank">Resume</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li class="current"><a href="research.html">Research</a></li>
+          <li><a href="research.html">Research</a></li>
           <li><a href="art.html">Art &amp; Design</a></li>
-          <li><a href="cardistry.html">Cardistry</a></li>
+          <li class="current"><a href="cardistry.html">Cardistry</a></li>
         </ul>
       </nav>
     </div>
