--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <ul>
           <li class="current"><a href="index.html">About</a></li>
           <li><a href="https://drive.google.com/file/d/1--5kR4o6tvyb9kgonyveolyrORQ6wEy0/view?usp=sharing" target="blank">Resume</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="research.html">Research</a></li>
-          <li><a href="art.html">Art &amp; Design</a></li>
+          <li><a href="./projects/projects.html">Projects</a></li>
+          <li><a href="./research/research.html">Research</a></li>
+          <li><a href="./art/art.html">Art &amp; Design</a></li>
           <li><a href="cardistry.html">Cardistry</a></li>
         </ul>
       </nav>
