--- a/projects/robot_head.html
+++ b/projects/robot_head.html
@@ -8,8 +8,8 @@
   <meta name = "viewport" content="width=device-width">
   <meta name="descripton" content="Yufeng (Eric) Wu's personal website">
   <meta name="keywords" content="portfolio, mechanical engineering">
-  <link rel="stylesheet" type="text/css" href="./css/default_style.css">
-  <link rel="stylesheet" type="text/css" href="./css/about/box.css">
+  <link rel="stylesheet" type="text/css" href="../css/default_style.css">
+  <link rel="stylesheet" type="text/css" href="../css/projectprofile.css">
 </head>
     
 <body>
@@ -20,16 +20,19 @@
       </div>
       <nav>
         <ul>
-          <li><a href="index.html">About</a></li>
+          <li><a href="../index.html">About</a></li>
           <li><a href="https://drive.google.com/file/d/1--5kR4o6tvyb9kgonyveolyrORQ6wEy0/view?usp=sharing" target="blank">Resume</a></li>
-          <li><a href="./projects/projects.html">Projects</a></li>
-          <li><a href="./research/research.html">Research</a></li>
-          <li><a href="./art/art.html">Art &amp; Design</a></li>
-          <li class="current"><a href="cardistry.html">Cardistry</a></li>
+          <li class="current"><a href="projects.html">Projects</a></li>
+          <li><a href="../research/research.html">Research</a></li>
+          <li><a href="../art/art.html">Art &amp; Design</a></li>
+          <li><a href="../cardistry.html">Cardistry</a></li>
         </ul>
       </nav>
     </div>
   </header>
+  
+
+
   
   
   
@@ -38,6 +41,9 @@
       <p class = contact>Contact Me:<br> yufeng.wu@tufts.edu</p>
     </div>
   </footer>
+  
+  
+  <script type="text/javascript" src="../javascript/project.js"></script>
   
 </body>
     
