--- a/projects/projects.html
+++ b/projects/projects.html
@@ -40,6 +40,7 @@
           <li><a onclick="changePages(2)">Robotics Club</a></li>
           <li><a onclick="changePages(3)">Hexapods</a></li>
           <li><a onclick="changePages(4)">LEGO-Related</a></li>
+					<li><a onclick="changePages(5)">Class Projects</a></li>
         </ul>
       </nav>
     </div>
@@ -98,25 +99,27 @@
         <h2>Robotics Club</h2>
         <div class="itembox">
           <div class="itemprofile">
-            <img src="../documents/about/Featuring_3.JPG" alt="Engineering Design" class="thumbnail">
+						<a href="robot_head.html"><img src="../documents/projects/thumbnails/" alt="Ceramics 3D Printer" class="thumbnail"></a>
             <div class="title">
-              <p>Hello World</p>
+                <p><a href="robot_head.html">UR5 Arm System Head</a></p>
             </div>
           </div> 
         </div>
+        <!--  -->  
         <div class="itembox">
           <div class="itemprofile">
-            <img src="../documents/about/Featuring_3.JPG" alt="Engineering Design" class="thumbnail">
+						<a href="robot_head.html"><img src="../documents/projects/thumbnails/robot_head.jpg" alt="Ceramics 3D Printer" class="thumbnail"></a>
             <div class="title">
-              <p>Hello World</p>
+                <p><a href="robot_head.html">UR5 Arm System Head</a></p>
             </div>
           </div> 
         </div>
+        <!--  -->  
         <div class="itembox">
           <div class="itemprofile">
-            <img src="../documents/about/Featuring_3.JPG" alt="Engineering Design" class="thumbnail">
+						<a href="robot_head.html"><img src="../documents/projects/thumbnails/robot_head.jpg" alt="Ceramics 3D Printer" class="thumbnail"></a>
             <div class="title">
-              <p>Hello World</p>
+                <p><a href="robot_head.html">UR5 Arm System Head</a></p>
             </div>
           </div> 
         </div>
@@ -183,7 +186,38 @@
           </div> 
         </div>
       </div>
-    </div>    
+    </div>
+		
+		<!-- Class Projects -->
+    <div class="container">
+      <div class="projectSections">
+        <h2>Class Projects</h2>
+        <div class="itembox">
+          <div class="itemprofile">
+            <img src="../documents/about/Featuring_1.JPEG" alt="Engineering Design" class="thumbnail">
+            <div class="title">
+              <p>Hello World</p>
+            </div>
+          </div> 
+        </div>
+        <div class="itembox">
+          <div class="itemprofile">
+            <img src="../documents/about/Featuring_1.JPEG" alt="Engineering Design" class="thumbnail">
+            <div class="title">
+              <p>Hello World</p>
+            </div>
+          </div> 
+        </div>
+        <div class="itembox">
+          <div class="itemprofile">
+            <img src="../documents/about/Featuring_1.JPEG" alt="Engineering Design" class="thumbnail">
+            <div class="title">
+              <p>Hello World</p>
+            </div>
+          </div> 
+        </div>
+      </div>
+    </div>
 
    
   </section>
