--- a/projects/projects.html
+++ b/projects/projects.html
@@ -57,36 +57,36 @@
         <!--  -->  
         <div class="itembox">
           <div class="itemprofile">
-						<a href="ceramics_printer.html"><img src="../documents/projects/thumbnails/ceramics_printer.JPG" alt="Ceramics 3D Printer" class="thumbnail"></a>
+						<a href="engineering_ceramics_printer.html"><img src="../documents/projects/thumbnails/enineering_ceramics_printer.jpeg" alt="Ceramics 3D Printer" class="thumbnail"></a>
             <div class="title">
-                <p><a href="../projects/ceramics_printer.html">Ceramics 3D-Printer</a></p>
+                <p><a href="engineering_ceramics_printer.html">Ceramics 3D-Printer</a></p>
             </div>
           </div> 
         </div>
         <!--  -->  
         <div class="itembox">
           <div class="itemprofile">
-						<a href="the_mighty_board.html"><img src="../documents/projects/thumbnails/the_mighty_board.JPEG" alt="Ceramics 3D Printer" class="thumbnail"></a>
+						<a href="engineering_the_mighty_board.html"><img src="../documents/projects/thumbnails/engineering_the_mighty_board.JPEG" alt="The Mighty Board" class="thumbnail"></a>
             <div class="title">
-                <p><a href="the_mighty_board.html">The Mighty Board</a></p>
+                <p><a href="engineering_the_mighty_board.html">The Mighty Board</a></p>
             </div>
           </div> 
         </div>
         <!--  -->  
         <div class="itembox">
           <div class="itemprofile">
-						<a href="iot_arms.html"><img src="../documents/projects/thumbnails/iot_arms.jpg" alt="Ceramics 3D Printer" class="thumbnail"></a>
+						<a href="engineering_iot_arms.html"><img src="../documents/projects/thumbnails/engineering_iot_arms.jpg" alt="2019 MakeHarvard Dum-E IoT" class="thumbnail"></a>
             <div class="title">
-                <p><a href="iot_arms.html">MakeHarvard Dum-E IoT</a></p>
+                <p><a href="engineering_iot_arms.html">2019 MakeHarvard Dum-E IoT</a></p>
             </div>
           </div> 
         </div>
         <!--  -->  
         <div class="itembox">
           <div class="itemprofile">
-						<a href="robot_head.html"><img src="../documents/projects/thumbnails/robot_head.jpg" alt="Ceramics 3D Printer" class="thumbnail"></a>
+						<a href="engineering_robot_head.html"><img src="../documents/projects/thumbnails/engineering_robot_head.jpg" alt="UR5 Arm System Head" class="thumbnail"></a>
             <div class="title">
-                <p><a href="robot_head.html">UR5 Arm System Head</a></p>
+                <p><a href="engineering_robot_head.html">UR5 Arm System Head</a></p>
             </div>
           </div> 
         </div>
@@ -99,27 +99,27 @@
         <h2>Robotics Club</h2>
         <div class="itembox">
           <div class="itemprofile">
-						<a href="robot_head.html"><img src="../documents/projects/thumbnails/" alt="Ceramics 3D Printer" class="thumbnail"></a>
+						<a href="robotics_trinity_2019.html"><img src="../documents/projects/thumbnails/robotics_trinity_2019.jpg" alt="Trinity 2019" class="thumbnail"></a>
             <div class="title">
-                <p><a href="robot_head.html">UR5 Arm System Head</a></p>
+                <p><a href="robot_head.html">2019 Trinity Firefighter Robot</a></p>
             </div>
           </div> 
         </div>
         <!--  -->  
         <div class="itembox">
           <div class="itemprofile">
-						<a href="robot_head.html"><img src="../documents/projects/thumbnails/robot_head.jpg" alt="Ceramics 3D Printer" class="thumbnail"></a>
+						<a href="robotics_pacbot_2019.html"><img src="../documents/projects/thumbnails/robotics_pacbot_2019.jpg" alt="2019 Pacbot Competition" class="thumbnail"></a>
             <div class="title">
-                <p><a href="robot_head.html">UR5 Arm System Head</a></p>
+                <p><a href="robotics_pacbot_2019.html">2019 Pacbot Competition</a></p>
             </div>
           </div> 
         </div>
         <!--  -->  
         <div class="itembox">
           <div class="itemprofile">
-						<a href="robot_head.html"><img src="../documents/projects/thumbnails/robot_head.jpg" alt="Ceramics 3D Printer" class="thumbnail"></a>
+						<a href="robotics_trinity_2018.html"><img src="../documents/projects/thumbnails/robotics_trinity_2018.jpg" alt="Trinity 2019" class="thumbnail"></a>
             <div class="title">
-                <p><a href="robot_head.html">UR5 Arm System Head</a></p>
+                <p><a href="robotics_trinity_2018.html">UR5 Arm System Head</a></p>
             </div>
           </div> 
         </div>
@@ -129,33 +129,45 @@
     <!-- hexapods -->
     <div class="container">
       <div class="projectSections">
-        <h2>Hexapods</h2>
+        <h2>Hexapods!</h2>
         <div class="itembox">
           <div class="itemprofile">
-            <img src="../documents/about/Featuring_1.JPEG" alt="Engineering Design" class="thumbnail">
+						<a href="hexapod_h2.html"><img src="../documents/projects/thumbnails/hexapod_h2.JPEG" alt="Hexapod H2" class="thumbnail"></a>
             <div class="title">
-              <p>Hello World</p>
+                <p><a href="hexapod_h2.html">H2</a></p>
             </div>
           </div> 
         </div>
+        <!--  -->  
         <div class="itembox">
           <div class="itemprofile">
-            <img src="../documents/about/Featuring_1.JPEG" alt="Engineering Design" class="thumbnail">
+						<a href="hexapod_h1mini.html"><img src="../documents/projects/thumbnails/hexapod_h1mini.JPEG" alt="H1 Mini" class="thumbnail"></a>
             <div class="title">
-              <p>Hello World</p>
+                <p><a href="hexapod_h1mini.html">H1 Mini</a></p>
             </div>
           </div> 
         </div>
+        <!--  -->  
         <div class="itembox">
           <div class="itemprofile">
-            <img src="../documents/about/Featuring_1.JPEG" alt="Engineering Design" class="thumbnail">
+						<a href="hexapod_h1.html"><img src="../documents/projects/thumbnails/hexapod_h1.JPEG" alt="H1" class="thumbnail"></a>
             <div class="title">
-              <p>Hello World</p>
+                <p><a href="hexapod_h1.html">H1</a></p>
+            </div>
+          </div> 
+        </div>
+			<!--  -->  
+        <div class="itembox">
+          <div class="itemprofile">
+						<a href="hexapod_prototypes.html"><img src="../documents/projects/thumbnails/hexapod_prototypes.jpg" alt="Prototypes" class="thumbnail"></a>
+            <div class="title">
+                <p><a href="hexapod_prototypes.html">Previous Prototypes</a></p>
             </div>
           </div> 
         </div>
       </div>
-    </div>
+		</div>
+		
     
     <!-- LEGO-related -->
     <div class="container">
@@ -163,56 +175,146 @@
         <h2>LEGO-Related</h2>
         <div class="itembox">
           <div class="itemprofile">
-            <img src="../documents/about/Featuring_1.JPEG" alt="Engineering Design" class="thumbnail">
+						<a href="lego_backpacks.html"><img src="../documents/projects/thumbnails/lego_backpacks.JPG" alt="Backpacks" class="thumbnail"></a>
             <div class="title">
-              <p>Hello World</p>
+                <p><a href="lego_backpacks.html">SPIKE Prime Backpacks</a></p>
             </div>
           </div> 
         </div>
+        <!--  -->  
         <div class="itembox">
           <div class="itemprofile">
-            <img src="../documents/about/Featuring_1.JPEG" alt="Engineering Design" class="thumbnail">
+						<a href="lego_pully.html"><img src="../documents/projects/thumbnails/lego_pully.jpg" alt="LEGO Pully" class="thumbnail"></a>
             <div class="title">
-              <p>Hello World</p>
+                <p><a href="lego_pully.html">LEGO Pully Learning Kit</a></p>
             </div>
           </div> 
         </div>
+        <!--  -->  
         <div class="itembox">
           <div class="itemprofile">
-            <img src="../documents/about/Featuring_1.JPEG" alt="Engineering Design" class="thumbnail">
+						<a href="lego_sec.html"><img src="../documents/projects/thumbnails/lego_sec.jpg" alt="LEGO SEC" class="thumbnail"></a>
             <div class="title">
-              <p>Hello World</p>
+                <p><a href="lego_sec.html">LEGO SEC at Tufts</a></p>
+            </div>
+          </div> 
+        </div>
+				<!--  -->  
+        <div class="itembox">
+          <div class="itemprofile">
+						<a href="lego_placemat.html"><img src="../documents/projects/thumbnails/lego_placemat.jpg" alt="LEGO Placemat" class="thumbnail"></a>
+            <div class="title">
+                <p><a href="lego_placemat.html">Placemat Insctruction</a></p>
+            </div>
+          </div> 
+        </div>
+				<!--  -->  
+        <div class="itembox">
+          <div class="itemprofile">
+						<a href="lego_coaster.html"><img src="../documents/projects/thumbnails/lego_coaster.png" alt="IoT Roller Coaster" class="thumbnail"></a>
+            <div class="title">
+                <p><a href="lego_coaster.html">IoT Roller Coaster</a></p>
+            </div>
+          </div> 
+        </div>
+				<!--  -->  
+        <div class="itembox">
+          <div class="itemprofile">
+						<a href="lego_tutorial.html"><img src="../documents/projects/thumbnails/lego_tutorials.png" alt="EV3 Tutorial" class="thumbnail"></a>
+            <div class="title">
+                <p><a href="lego_tutorial.html">EV3 Building Tutorial</a></p>
+            </div>
+          </div> 
+        </div>
+				<!--  -->  
+        <div class="itembox">
+          <div class="itemprofile">
+						<a href="lego_staircase.html"><img src="../documents/projects/thumbnails/lego_staircase.png" alt="LEGO Staircase" class="thumbnail"></a>
+            <div class="title">
+                <p><a href="hexapod_prototypes.html">LEGO Staircase</a></p>
             </div>
           </div> 
         </div>
       </div>
-    </div>
+		</div>
+			
 		
 		<!-- Class Projects -->
     <div class="container">
       <div class="projectSections">
         <h2>Class Projects</h2>
-        <div class="itembox">
+				<h3>ME 0084 - Intro Robotics &#38; Mech</h3>
+				<p>A project-oriented robotics course that explores various aspects about robotics, including robot design, electronics, coding (Micropython), debugging, etc.</p>
+        <!--  -->  
+				<div class="itembox">
           <div class="itemprofile">
-            <img src="../documents/about/Featuring_1.JPEG" alt="Engineering Design" class="thumbnail">
+						<a href="me84_finalproj.html"><img src="../documents/projects/thumbnails/me84_finalproj.jpg" alt="Puppet" class="thumbnail"></a>
             <div class="title">
-              <p>Hello World</p>
+                <p><a href="me84_finalproj.html">Final Project</a></p>
             </div>
           </div> 
         </div>
-        <div class="itembox">
+				<!--  -->  
+				<div class="itembox">
           <div class="itemprofile">
-            <img src="../documents/about/Featuring_1.JPEG" alt="Engineering Design" class="thumbnail">
+						<a href="me84_hw8.html"><img src="../documents/projects/thumbnails/me84_hw8.jpg" alt="Autodrive" class="thumbnail"></a>
             <div class="title">
-              <p>Hello World</p>
+                <p><a href="me84_hw8.html">HW 8</a></p>
             </div>
           </div> 
         </div>
-        <div class="itembox">
+				<!--  -->  
+				<div class="itembox">
           <div class="itemprofile">
-            <img src="../documents/about/Featuring_1.JPEG" alt="Engineering Design" class="thumbnail">
+						<a href="me84_hw8.html"><img src="../documents/projects/thumbnails/me84_hw7.JPG" alt="Autodrive" class="thumbnail"></a>
             <div class="title">
-              <p>Hello World</p>
+                <p><a href="me84_hw8.html">HW 7</a></p>
+            </div>
+          </div> 
+        </div>
+        <!--  -->  
+				<div class="itembox">
+          <div class="itemprofile">
+						<a href="me84_hw5.html"><img src="../documents/projects/thumbnails/me84_hw5.jpg" alt="Q-bot" class="thumbnail"></a>
+            <div class="title">
+                <p><a href="me84_hw5.html">Q-Bot</a></p>
+            </div>
+          </div> 
+        </div>
+				
+				<!--  -->  
+				<div class="itembox">
+          <div class="itemprofile">
+						<a href="me84_hw4.html"><img src="../documents/projects/thumbnails/me84_hw4.jpg" alt="Map" class="thumbnail"></a>
+            <div class="title">
+                <p><a href="me84_hw4.html">IoT Map</a></p>
+            </div>
+          </div> 
+        </div>
+				<!--  -->  
+				<div class="itembox">
+          <div class="itemprofile">
+						<a href="me84_hw3.html"><img src="../documents/projects/thumbnails/me84_hw3.png" alt="Sculpture" class="thumbnail"></a>
+            <div class="title">
+                <p><a href="me84_hw3.html">IoT LEGO Structure</a></p>
+            </div>
+          </div> 
+        </div>
+				<!--  -->  
+				<div class="itembox">
+          <div class="itemprofile">
+						<a href="me84_hw2.html"><img src="../documents/projects/thumbnails/me84_hw2.jpeg" alt="Haptic Feedback" class="thumbnail"></a>
+            <div class="title">
+                <p><a href="me84_hw2.html">Haptic Feedback</a></p>
+            </div>
+          </div> 
+        </div>
+				<!--  -->  
+				<div class="itembox">
+          <div class="itemprofile">
+						<a href="me84_hw1.html"><img src="../documents/projects/thumbnails/me84_hw1.jpg" alt="Animated Sculpture" class="thumbnail"></a>
+            <div class="title">
+                <p><a href="me84_hw1.html">LEGO Animated Sculpture</a></p>
             </div>
           </div> 
         </div>
@@ -227,6 +329,12 @@
   <footer>
     <div class="container">
       <p class = contact>Contact Me:<br> yufeng.wu@tufts.edu</p>
+			<div id="icons">
+				<a href="https://www.instagram.com/eric_wuyufeng/?hl=en" target="blank"><img src="../documents/icons/Instagram.png"></a>
+				<a href="https://www.youtube.com/channel/UCSTgob4NNM6V9xhvlqdHFvA?view_as=subscriber" target="blank"><img src="../documents/icons/Youtube.png"></a>
+				<a href="https://www.facebook.com/profile.php?id=100008802941721" target="blank"><img src="../documents/icons/Facebook.png"></a>
+				<a href="https://www.linkedin.com/in/yufeng-eric-wu/" target="blank"><img src="../documents/icons/Linkedin.png"></a>
+			</div>
     </div>
   </footer>
   
