--- a/projects/projects.html
+++ b/projects/projects.html
@@ -266,7 +266,7 @@
 				<!--  -->  
 				<div class="itembox">
           <div class="itemprofile">
-						<a href="me84_hw8.html"><img src="../documents/projects/thumbnails/me84_hw7.JPG" alt="Autodrive" class="thumbnail"></a>
+						<a href="me84_hw7.html"><img src="../documents/projects/thumbnails/me84_hw7.JPG" alt="Coconut" class="thumbnail"></a>
             <div class="title">
                 <p><a href="me84_hw8.html">HW 7</a></p>
             </div>
@@ -294,7 +294,7 @@
 				<!--  -->  
 				<div class="itembox">
           <div class="itemprofile">
-						<a href="me84_hw3.html"><img src="../documents/projects/thumbnails/me84_hw3.png" alt="Sculpture" class="thumbnail"></a>
+						<a href="me84_hw3.html"><img src="../documents/projects/thumbnails/me84_hw3.jpg" alt="Sculpture" class="thumbnail"></a>
             <div class="title">
                 <p><a href="me84_hw3.html">IoT LEGO Structure</a></p>
             </div>
