--- a/projects/projects.html
+++ b/projects/projects.html
@@ -333,6 +333,7 @@
 				<a href="https://www.instagram.com/eric_wuyufeng/?hl=en" target="blank"><img src="../documents/icons/Instagram.png"></a>
 				<a href="https://www.youtube.com/channel/UCSTgob4NNM6V9xhvlqdHFvA?view_as=subscriber" target="blank"><img src="../documents/icons/Youtube.png"></a>
 				<a href="https://www.facebook.com/profile.php?id=100008802941721" target="blank"><img src="../documents/icons/Facebook.png"></a>
+				<a href="https://github.com/EricYufengWu" target="blank"><img src="../documents/icons/Github.png"></a>
 				<a href="https://www.linkedin.com/in/yufeng-eric-wu/" target="blank"><img src="../documents/icons/Linkedin.png"></a>
 			</div>
     </div>
