--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="descripton" content="Yufeng (Eric) Wu's personal website">
   <meta name="keywords" content="portfolio, mechanical engineering">
   <link rel="stylesheet" type="text/css" href="./css/default_style.css">
-  <link rel="stylesheet" type="text/css" href="./css/showcase.css">
+  <link rel="stylesheet" type="text/css" href="./css/showcase_about.css">
   <link rel="stylesheet" type="text/css" href="./css/box.css">
 </head>
 
@@ -19,7 +19,16 @@
     <div class="container">
       <div id="branding">
         <h1>Yufeng (Eric) Wu</h1>
+				<div id="topicons">
+					<a href="https://www.instagram.com/eric_wuyufeng/?hl=en" target="blank"><img src="/documents/icons/Instagram.png"></a>
+					<a href="https://www.youtube.com/channel/UCSTgob4NNM6V9xhvlqdHFvA?view_as=subscriber" target="blank"><img src="/documents/icons/Youtube.png"></a>
+					<a href="https://www.facebook.com/profile.php?id=100008802941721" target="blank"><img src="/documents/icons/Facebook.png"></a>
+					<a href="https://github.com/EricYufengWu" target="blank"><img src="/documents/icons/Github.png"></a>
+					<a href="https://www.linkedin.com/in/yufeng-eric-wu/" target="blank"><img src="/documents/icons/Linkedin.png"></a>
+				</div>
       </div>
+		</div>
+		<div class="container">	
       <nav>
         <ul>
           <li class="current"><a href="index.html">About</a></li>
@@ -50,55 +59,55 @@
       <!-- Full-width images with number text -->
       <div class="mySlides">
         <div class="numbertext">1 / 6</div>
-        <a href="https://yufengericwu.myportfolio.com/" target="_blank"><img src="./documents/about/Featuring_1.JPEG" style="width:100%"></a>
+        <a href="/projects/hexapod_h2.html"><img src="./documents/about/Featuring_1.JPEG" style="width:100%"></a>
         <div class="imgcontent">
           <h1>Hexapods</h1>
-          <p class="showcasetext">Starting in my Sophomore Spring, I am building a series of hexapods from scratch. Right now I have built and tested 4 of them, and the number will continue to grow as I keep making improvements on all aspects.&nbsp<a class="showcaselink" href="https://yufengericwu.myportfolio.com/" target="_blank">Learn more</a></p>
+          <p class="showcasetext">Starting in my Sophomore Spring, I am building a series of hexapods from scratch. Right now I have built and tested 4 of them, and the number will continue to grow as I keep making improvements on all aspects.&nbsp<a class="showcaselink" href=" /projects/hexapod_h2.html">Learn more</a></p>
         </div>
       </div> 
 
       <div class="mySlides">
         <div class="numbertext">2 / 6</div>
-        <a href="https://yufengericwu.myportfolio.com/" target="_blank"><img src="./documents/about/Featuring_2.JPG" style="width:100%"></a>
+        <a href="/projects/engineering_the_mighty_board.html"><img src="./documents/about/Featuring_2.JPG" style="width:100%"></a>
         <div class="imgcontent">
           <h1>LEGO Spike Prime Backpack</h1>
-          <p class="showcasetext">As an intern in Tufts Center for Engineering Education and Outreach (CEEO), I designed PCBs and 3D-printed housings that combine 3rd-party devices with the new LEGO robotics education kit.&nbsp<a class="showcaselink" href="https://yufengericwu.myportfolio.com/" target="_blank">Learn more</a></p>
+          <p class="showcasetext">As an intern in Tufts Center for Engineering Education and Outreach (CEEO), I designed PCBs and 3D-printed housings that combine 3rd-party devices with the new LEGO robotics education kit.&nbsp<a class="showcaselink" href="/projects/engineering_the_mighty_board.html">Learn more</a></p>
         </div>
       </div> 
 
       <div class="mySlides">
         <div class="numbertext">3 / 6</div>
-        <a href="https://yufengericwu.myportfolio.com/" target="_blank"><img src="./documents/about/Featuring_3.JPG" style="width:100%"></a>
+        <a href="/projects/engineering_ceramics_printer.html"><img src="./documents/about/Featuring_3.jpeg" style="width:100%"></a>
         <div class="imgcontent">
           <h1>Delta Ceramics 3D-Printer</h1>
-          <p class="showcasetext">With a professor in Tufts Sculpture department, I built a delta-style 3D-printer dedicated for ceramics (clay) printing. We adopted a design online and built our own version with improvements.&nbsp<a class="showcaselink" href="https://yufengericwu.myportfolio.com/" target="_blank">Learn more</a></p>
+          <p class="showcasetext">With a professor in Tufts Sculpture department, I built a delta-style 3D-printer dedicated for ceramics (clay) printing. We adopted a design online and built our own version with improvements.&nbsp<a class="showcaselink" href="/projects/engineering_ceramics_printer.html">Learn more</a></p>
         </div>
       </div> 
 
       <div class="mySlides">
         <div class="numbertext">4 / 6</div>
-        <a href="https://yufengericwu.myportfolio.com/" target="_blank"><img src="./documents/about/Featuring_4.jpg" style="width:100%"></a>
+        <a href="/research/research.html"><img src="./documents/about/Featuring_4.jpg" style="width:100%"></a>
         <div class="imgcontent">
           <h1>Fluidic Control Board for Soft Robotics</h1>
-          <p class="showcasetext">I built a control board with a solenoid valve manifold and power MOSFETS. The board is used in my lab to study and test out inflatable soft robotics actuators.&nbsp<a class="showcaselink" href="https://yufengericwu.myportfolio.com/" target="_blank">Learn more</a></p>
+          <p class="showcasetext">I built a control board with a solenoid valve manifold and power MOSFETS. The board is used in my lab to study and test out inflatable soft robotics actuators.&nbsp<a class="showcaselink" href="/research/research.html">Learn more</a></p>
         </div>
       </div> 
 
       <div class="mySlides">
         <div class="numbertext">5 / 6</div>
-        <a href="https://yufengericwu.myportfolio.com/" target="_blank"><img src="./documents/about/Featuring_5.JPEG" style="width:100%"></a>
+        <a href="/projects/lego_backpacks.html"><img src="./documents/about/Featuring_5.JPEG" style="width:100%"></a>
         <div class="imgcontent">
           <h1>The Mighty Board</h1>
-          <p class="showcasetext">I designed a "microcontrollers board" for a professor at Tufts University: A board that hosts several development boards and makes testing and learning embedded system programming easier than ever.&nbsp<a class="showcaselink" href="https://yufengericwu.myportfolio.com/" target="_blank">Learn more</a></p>
+          <p class="showcasetext">I designed a "microcontrollers board" for a professor at Tufts University: A board that hosts several development boards and makes testing and learning embedded system programming easier than ever.&nbsp<a class="showcaselink" href="/projects/lego_backpacks.html">Learn more</a></p>
         </div>
       </div> 
 
       <div class="mySlides">
         <div class="numbertext">6 / 6</div>
-        <a href="https://yufengericwu.myportfolio.com/" target="_blank"><img src="./documents/about/Featuring_6.jpg" style="width:100%"></a>
+        <a href="/projects/me84_finalproj.html"><img src="./documents/about/Featuring_6.jpg" style="width:100%"></a>
         <div class="imgcontent">
           <h1>MiniJumbo</h1>
-          <p class="showcasetext">The final project of my Sophomore spring robotics class, this cute puppet has 6 degrees of freedom and can interact with his surroundings through image processing.&nbsp<a class="showcaselink" href="https://yufengericwu.myportfolio.com/" target="_blank">Learn more</a></p>
+          <p class="showcasetext">The final project of my Sophomore spring robotics class, this cute puppet has 6 degrees of freedom and can interact with his surroundings through image processing.&nbsp<a class="showcaselink" href="/projects/me84_finalproj.html">Learn more</a></p>
         </div>
       </div> 
       
@@ -115,7 +124,7 @@
           <img class="demo cursor" src="./documents/about/Featuring_2.JPG" style="width:100%" onclick="currentSlide(2)" alt="Featuring_2">
         </div>
         <div class="column">
-          <img class="demo cursor" src="./documents/about/Featuring_3.JPG" style="width:100%" onclick="currentSlide(3)" alt="Featuring_3">
+          <img class="demo cursor" src="./documents/about/Featuring_3.jpeg" style="width:100%" onclick="currentSlide(3)" alt="Featuring_3">
         </div>
         <div class="column">
           <img class="demo cursor" src="./documents/about/Featuring_4.jpg" style="width:100%" onclick="currentSlide(4)" alt="Featuring_4">
