--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html>
+	
+
+
 
 <head>
   <title>Yufeng (Eric) Wu | Welcome</title>
@@ -14,6 +17,8 @@
 </head>
 
 <body>
+	
+	
   
   <header>
     <div class="container">
@@ -174,9 +179,21 @@
 			</div>
     </div>
   </footer>
+	
+	
   
   <script type="text/javascript" src="./javascript/about.js"></script>
-  
+	<script type="text/javascript" src="./javascript/jquery-3.4.1.js"></script>
+	
+  <script>
+  	alert('Please turn off your Adblocker, as it might prevent some content to show up. I promise that there\'s no Ads here :P');
+	</script>
+	
+	<div id="wrapfabtest">
+    <div class="adBanner">
+    </div>
+	</div>
+
 </body>
     
 </html>
