--- a/projects/project_template.html
+++ b/projects/project_template.html
@@ -47,26 +47,24 @@
 		<div class="container">
 			<br>
 			<div class="prev_button">
-				<a class="prev_page" href=""><p>&lt;&lt; Prev: None</p></a>
+				<a class="prev_page" href=""><p>&lt;&lt; Prev:</p></a>
 			</div>
 			<div class="next_button">
-				<a class="next_page" href="engineering_the_mighty_board.html"><p>Next: The Mighty Board &gt;&gt;</p></a>
+				<a class="next_page" href="engineering_the_mighty_board.html"><p>Next: &gt;&gt;</p></a>
 			</div>
 		</div>
 		
 	
 		<div class="container">
-			<h2 class="centered">Delta Ceramics 3D Printer</h2>
-			<p class="light"><b>Note:</b> This is an ongoing project, so I will be frequently updating the page.</p>
-			<p class="main_content">Starting from July 2019, I am building a Delta-style ceramics 3D Printer with Floor Van De Velde, a Professor from the School of Museum of Fine Arts at Tufts (<a href="https://smfa.tufts.edu/directory/floor-van-de-velde" target="_blank">link to bio</a>). For the first version of our printer, we adapted the design from <a href="http://www.keep-art.co.uk/Self_build.html" target="_blank">Jonathan Keep</a>, while making modifications and improvements on several apects, including the three sliding brackets at the sides, fixturing method for the rods, the upper plates, etc. </p>
-			<p>After we did the structure fabrication together, I connected the electronics and configured the Marlin Firmware. We printed out several vases successfully on the first week of September, and have decided to continue working on improving it's performance in all aspects.</p>
-			<p>This project gets me exposed to all aspects about a custom-build FDM 3D Printer, including stepper motor controls, power management, printer calibration, G-code, and slicing configurations.
+			<h2 class="centered">Title of Page</h2>
+			<!---<p class="light"><b>Note:</b> This is an ongoing project, so I will be frequently updating the page.</p>--->
+			<p class="main_content">Village did removed enjoyed explain nor ham saw calling talking. Securing as informed declared or margaret. Joy horrible moreover man feelings own shy. Request norland neither mistake for yet. Between the for morning assured country believe. On even feet time have an no at. Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get adieus nature day course for common. My little garret repair to desire he esteem. <a href="" target="_blank">link</a>
 		</div>
 
 	
 		<div class="container">
 			<h3>Latest Update</h3>
-			<p>After two weeks of calibration, clay preparation, and electronics debugging, we finally made our first successful print! The extruder is working consistently and the stepper motors are interpreting G-code fairly accurately. While this is a great start, we still have a lot of improvements to make: finding a more suitable nozzle, securing the stepper-motor belt, improving the calibration process, etc.</p>
+			<p>Village did removed enjoyed explain nor ham saw calling talking. Securing as informed declared or margaret. Joy horrible moreover man feelings own shy. Request norland neither mistake for yet. Between the for morning assured country believe. On even feet time have an no at. Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get adieus nature day course for common. My little garret repair to desire he esteem.</p>
 		</div>
 	
 
@@ -135,7 +133,7 @@
 
 				</div>
 			</div>
-			<p class="img_caption">Printer worked for the first time. 09-10-2019</p>
+			<p class="img_caption">Gallery Title. 09-10-2019</p>
 			<br>
 		</div>	
 
@@ -143,18 +141,18 @@
 		
 		
 		<div class="container">
-			<h3>1. Fabrication</h3>
+			<h3>1. Stage</h3>
 			<p class = "light">July 22nd - Mid August</p>
-			<p>We started the project by going through the old list provided by the tutorial. We fixed some broken links and replaced the old electronics board with the latest one available on market. After purchasing all the materials, we made re-designed alot of the fabrication files to fit the dimensions of the components we got. The main structure (base &amp; top) were machined on an X-Carve machine using MDF and Plywood.</p>
+			<p>Village did removed enjoyed explain nor ham saw calling talking. Securing as informed declared or margaret. Joy horrible moreover man feelings own shy. Request norland neither mistake for yet. Between the for morning assured country believe. On even feet time have an no at. Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get adieus nature day course for common. My little garret repair to desire he esteem.</p>
 			<div class="single"><img src="/documents/projects/engineering_ceramics_printer/fabrication_1.JPG" onclick="openModal();currentSlide(5)" class="hover-shadow"></div>
 			<p class="img_caption">Building in progress.</p>
 			<br>
 		</div>
 		
 		<div class="container">
-			<h3>2. Electronics and Calibration</h3>
+			<h3>2. Stage</h3>
 			<p class = "light">Mid August - September 10</p>
-			<p>After finishing the physical build with Floor, I set up the RAMPS1.4 board, plugged in all the wires, and configured Marlin to be used on the printer. This is the first custom-made 3D printer I've built, so it took me a while to figure out how to edit the preferences in the Marlin firmware. I also used a potentiometer to "trick" the temperature sensor. After all the firmware configuration is complete, I designed a simple base plate to organize the power adapter, the board, and the LCD screen (shown in final setup).</p>
+			<p>Village did removed enjoyed explain nor ham saw calling talking. Securing as informed declared or margaret. Joy horrible moreover man feelings own shy. Request norland neither mistake for yet. Between the for morning assured country believe. On even feet time have an no at. Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get adieus nature day course for common. My little garret repair to desire he esteem.</p>
 			<div class="single"><img src="/documents/projects/engineering_ceramics_printer/electronics_1.jpeg" onclick="openModal();currentSlide(6)" class="hover-shadow"></div>
 			<p class="img_caption">Printer firmware configuration (Marlin).</p>
 		</div>
@@ -164,10 +162,10 @@
 		<div class="container">
 			<br>
 			<div class="prev_button">
-				<a class="prev_page" href=""><p>&lt;&lt;</p></a>
+				<a class="prev_page" href=""><p>&lt;&lt; Prev:</p></a>
 			</div>
 			<div class="next_button">
-				<a class="next_page" href="engineering_the_mighty_board.html"><p>Next: The Mighty Board &gt;&gt;</p></a>
+				<a class="next_page" href="engineering_the_mighty_board.html"><p>Next:&gt;&gt;</p></a>
 			</div>
 		</div>
 		
