--- a/projects/project_template.html
+++ b/projects/project_template.html
@@ -50,7 +50,7 @@
 				<a class="prev_page" href=""><p>&lt;&lt; Prev:</p></a>
 			</div>
 			<div class="next_button">
-				<a class="next_page" href="engineering_the_mighty_board.html"><p>Next: &gt;&gt;</p></a>
+				<a class="next_page" href=""><p>Next: &gt;&gt;</p></a>
 			</div>
 		</div>
 		
@@ -58,6 +58,7 @@
 		<div class="container">
 			<h2 class="centered">Title of Page</h2>
 			<!---<p class="light"><b>Note:</b> This is an ongoing project, so I will be frequently updating the page.</p>--->
+			<!--<p class="date">March 2019 - May 2019</p>-->
 			<p class="main_content">Village did removed enjoyed explain nor ham saw calling talking. Securing as informed declared or margaret. Joy horrible moreover man feelings own shy. Request norland neither mistake for yet. Between the for morning assured country believe. On even feet time have an no at. Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get adieus nature day course for common. My little garret repair to desire he esteem. <a href="" target="_blank">link</a>
 		</div>
 
