--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 
       <div class="mySlides">
         <div class="numbertext">2 / 6</div>
-        <a href="/projects/engineering_the_mighty_board.html"><img src="./documents/about/Featuring_2.JPG" style="width:100%"></a>
+        <a href="/projects/lego_backpacks.html"><img src="./documents/about/Featuring_2.JPG" style="width:100%"></a>
         <div class="imgcontent">
           <h1>LEGO Spike Prime Backpack</h1>
-          <p class="showcasetext">As an intern in Tufts Center for Engineering Education and Outreach (CEEO), I designed PCBs and 3D-printed housings that combine 3rd-party devices with the new LEGO robotics education kit.&nbsp<a class="showcaselink" href="/projects/engineering_the_mighty_board.html">Learn more</a></p>
+          <p class="showcasetext">As an intern in Tufts Center for Engineering Education and Outreach (CEEO), I designed PCBs and 3D-printed housings that combine 3rd-party devices with the new LEGO robotics education kit.&nbsp<a class="showcaselink" href="/projects/lego_backpacks.html">Learn more</a></p>
         </div>
       </div> 
 
@@ -100,10 +100,10 @@
 
       <div class="mySlides">
         <div class="numbertext">5 / 6</div>
-        <a href="/projects/lego_backpacks.html"><img src="./documents/about/Featuring_5.JPEG" style="width:100%"></a>
+        <a href="/projects/engineering_the_mighty_board.html"><img src="./documents/about/Featuring_5.JPEG" style="width:100%"></a>
         <div class="imgcontent">
           <h1>The Mighty Board</h1>
-          <p class="showcasetext">I designed a "microcontrollers board" for a professor at Tufts University: A board that hosts several development boards and makes testing and learning embedded system programming easier than ever.&nbsp<a class="showcaselink" href="/projects/lego_backpacks.html">Learn more</a></p>
+          <p class="showcasetext">I designed a "microcontrollers board" for a professor at Tufts University: A board that hosts several development boards and makes testing and learning embedded system programming easier than ever.&nbsp<a class="showcaselink" href="/projects/engineering_the_mighty_board.html">Learn more</a></p>
         </div>
       </div> 
 
@@ -157,12 +157,12 @@
       <div class="box">
         <img src="./documents/about/robotics.png" alt="Robotics">
         <h3>Robotics</h3>
-        <p>As a project leader and a core member at Tufts Robotics Club, I am familiar with the hardware aspects of robotics such ad actuators, sensors, PCB designing, front-end programming, etc.</p>
+        <p>As a project leader and a core member at Tufts Robotics Club, I am familiar with the hardware aspects of robotics such ad actuators, sensors, PCB designing, embedded programming, etc.</p>
       </div>
       <div class="box">
         <img src="./documents/about/digital_fabrication.png" alt="Digital Fabrication">
         <h3>Digital Fabrication</h3>
-        <p>As a fabrication specialist in Tufts Nolop Makerspace, I am experienced with operating different fabrication tools and using CAD softwares such as Solidworks, Illustrator, and Rhino.</p>
+        <p>As a fabrication specialist in Tufts Nolop Makerspace, I am experienced with operating different fabrication tools and using CAD softwares such as Solidworks and Illustrator.</p>
       </div>
     </div>
   </section>
